--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   </div>
 
   <!-- Главный модуль с версионированием -->
-  <script type="module" src="src/main.js?v=2025-10-24-02"></script>
+<script src="app.legacy.js?v=2025-10-24-02"></script>
   <script>
     // иконки после монтирования
     window.lucide && lucide.createIcons && lucide.createIcons();
