--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
     </template>
   </div>
 
-  <!-- Главный модуль: НИКАКИХ бандлов -->
-  <script type="module" src="src/main.js"></script>
+  <!-- Главный модуль: с версионированием (пробиваем кэш) -->
+  <script type="module" src="src/main.js?v=2025-10-25-01"></script>
 
   <script>
     // Иконки после монтирования (запасной вызов)
